{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 13,
  "lineage": "08ae4c17-0053-3d70-5654-90aed5b5d9b3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_engine_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "49134"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-22T16:17:42.082-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iii-devops-497121/global/firewalls/allow-iii-engine-internal",
            "log_config": [],
            "name": "allow-iii-engine-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc",
            "priority": 1000,
            "project": "iii-devops-497121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/firewalls/allow-iii-engine-internal",
            "source_ranges": [
              "10.0.0.0/24",
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gateway"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3111"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-22T16:17:42.644-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iii-devops-497121/global/firewalls/allow-iii-http",
            "log_config": [],
            "name": "allow-iii-http",
            "network": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc",
            "priority": 1000,
            "project": "iii-devops-497121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/firewalls/allow-iii-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gateway"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-05-22T16:17:42.641-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iii-devops-497121/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc",
            "priority": 1000,
            "project": "iii-devops-497121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-22T16:17:42.476-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iii-devops-497121/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc",
            "priority": 1000,
            "project": "iii-devops-497121",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "gateway"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "caller_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260513",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/zones/us-central1-a/disks/iii-caller-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/iii-devops-497121/zones/us-central1-a/instances/iii-caller-worker",
            "instance_id": "8371563704491006674",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "engine-ip": "10.0.0.2",
              "ssh-keys": "debian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIHRVWMXgQb0dLL+S7adx2pHC/egHJYQOb0ixai9xrHp4 samuelkwuelum@Sparks-MacBook-Air.local",
              "startup-script": "#!/bin/bash\nset -e\nexec \u003e /var/log/iii-caller-worker.log 2\u003e\u00261\n\n# Read engine IP from GCP instance metadata\nENGINE_IP=$(curl -s \"http://metadata.google.internal/computeMetadata/v1/instance/attributes/engine-ip\" -H \"Metadata-Flavor: Google\")\n\necho \"=== Starting caller worker setup, engine at $ENGINE_IP ===\"\n\napt-get update -y\napt-get install -y curl git netcat-openbsd\n\n# Install Node.js\ncurl -fsSL https://deb.nodesource.com/setup_2 [...]
            },
            "metadata_fingerprint": "MYkUBBqrdPg=",
            "name": "iii-caller-worker",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/regions/us-central1/subnetworks/iii-private-subnet",
                "subnetwork_project": "iii-devops-497121"
              }
            ],
            "project": "iii-devops-497121",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/zones/us-central1-a/instances/iii-caller-worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_instance.gateway",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260513",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/zones/us-central1-a/disks/iii-gateway"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/iii-devops-497121/zones/us-central1-a/instances/iii-gateway",
            "instance_id": "4668882586271832779",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "debian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIHRVWMXgQb0dLL+S7adx2pHC/egHJYQOb0ixai9xrHp4 samuelkwuelum@Sparks-MacBook-Air.local",
              "startup-script": "#!/bin/bash\nset -e\nexec \u003e /var/log/iii-setup.log 2\u003e\u00261\n\necho \"=== Starting gateway setup ===\"\n\napt-get update -y\napt-get install -y curl git\n\n# Install iii\ncurl -fsSL https://install.iii.dev/iii/main/install.sh | sh\nexport PATH=\"/root/.local/bin:$PATH\"\n\n# Clone the project\ngit clone https://github.com/Alchemyst-ai/hiring.git /opt/iii-project\n\n# Write the gateway config (no worker_path entries, host 0.0.0.0)\ncat \u003e /opt/iii-p [...]
            },
            "metadata_fingerprint": "C6YgbliSrIM=",
            "name": "iii-gateway",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.173.71.181",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/regions/us-central1/subnetworks/iii-public-subnet",
                "subnetwork_project": "iii-devops-497121"
              }
            ],
            "project": "iii-devops-497121",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/zones/us-central1-a/instances/iii-gateway",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "gateway"
            ],
            "tags_fingerprint": "UrM6jlsUTDs=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "inference_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260513",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/zones/us-central1-a/disks/iii-inference-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/iii-devops-497121/zones/us-central1-a/instances/iii-inference-worker",
            "instance_id": "697623277404510930",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "engine-ip": "10.0.0.2",
              "ssh-keys": "debian:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIHRVWMXgQb0dLL+S7adx2pHC/egHJYQOb0ixai9xrHp4 samuelkwuelum@Sparks-MacBook-Air.local",
              "startup-script": "#!/bin/bash\nset -e\nexec \u003e /var/log/iii-inference-worker.log 2\u003e\u00261\n\n# Read engine IP from GCP instance metadata\nENGINE_IP=$(curl -s \"http://metadata.google.internal/computeMetadata/v1/instance/attributes/engine-ip\" -H \"Metadata-Flavor: Google\")\n\necho \"=== Starting inference worker setup, engine at $ENGINE_IP ===\"\n\napt-get update -y\napt-get install -y curl git python3 python3-pip python3-venv netcat-openbsd\n\n# Install iii\ncurl -fsSL [...]
            },
            "metadata_fingerprint": "tTgWWMt4_tw=",
            "name": "iii-inference-worker",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/regions/us-central1/subnetworks/iii-private-subnet",
                "subnetwork_project": "iii-devops-497121"
              }
            ],
            "project": "iii-devops-497121",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/zones/us-central1-a/instances/iii-inference-worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_instance.gateway",
            "google_compute_network.vpc",
            "google_compute_subnetwork.private",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/iii-devops-497121/global/networks/iii-vpc",
            "mtu": 0,
            "name": "iii-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5453998901423856912",
            "project": "iii-devops-497121",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-22T16:17:42.700-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/iii-devops-497121/regions/us-central1/routers/iii-router",
            "name": "iii-router",
            "network": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc",
            "project": "iii-devops-497121",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/regions/us-central1/routers/iii-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "iii-devops-497121/us-central1/iii-router/iii-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "iii-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "iii-devops-497121",
            "region": "us-central1",
            "router": "iii-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-22T16:17:42.332-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/iii-devops-497121/regions/us-central1/subnetworks/iii-private-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "iii-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iii-devops-497121",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/regions/us-central1/subnetworks/iii-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-22T16:17:42.672-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/iii-devops-497121/regions/us-central1/subnetworks/iii-public-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "iii-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/global/networks/iii-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iii-devops-497121",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iii-devops-497121/regions/us-central1/subnetworks/iii-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}